<resources>
    <string name="app_name">Text2SpeechProject</string>
    <string name="pitch">Pitch</string>
    <string name="speed">Speed</string>
    <string name="button_speak">SAY OUT LOUD!!</string>
    <string name="input_text">Enter the text</string>
    <string name="radio_fr">French</string>
    <string name="radio_it">Italian</string>
    <string name="radio_en_us">English (US)</string>
    <string name="radio_en_uk">English (UK)</string>
    <string name="radio_de">German</string>
    <string name="radio_voice_1">Voice-1</string>
    <string name="radio_voice_2">Voice-2</string>
    <string name="dropdown_language_text">Select Language</string>
    <string name="dropdown_language_hint">Languages</string>
    <string name="dropdown_voice_text">Select Voice</string>
    <string name="dropdown_voice_hint">Voices</string>
    <string name="action_settings">Settings</string>


    <string-array name="array_languages">
        <item>English-US</item>
        <item>English-UK</item>
        <item>Italian</item>
        <item>German</item>
        <item>French</item>
    </string-array>

    <string-array name="array_voices">
        <item>Voice_1</item>
        <item>Voice_2</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_start_read_from_file">Read Out From File</string>
    <string name="textView_fragment_readOut_info">Please choose a PDF file to be read out loud !</string>
    <string name="textView_highlight_main">Highlighted Text</string>
    <string name="button_find_pdf">Find PDF File!!</string>
    <string name="button_read_text_of_file">Start Reading Out Loud</string>
    <string name="permission_required">Required Permissions</string>
</resources>