<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_text"
        android:layout_marginBottom="16dp"
        android:inputType="textMultiLine"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:checked="true"
            android:id="@+id/radio_en_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_en_us" />

        <RadioButton
            android:checked="true"
            android:id="@+id/radio_en_uk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_en_uk" />

        <RadioButton
            android:id="@+id/radio_fr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_fr" />

        <RadioButton
            android:id="@+id/radio_it"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_it" />

        <RadioButton
            android:id="@+id/radio_de"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_de" />

    </RadioGroup>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pitch"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        />
    <SeekBar
        android:id="@+id/seek_bar_pitch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:progress="50"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed"
        android:textSize="16sp"
        />
    <SeekBar
        android:id="@+id/seek_bar_speed"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:progress="50"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/button_speak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_speak"
        android:layout_gravity="center_horizontal"
        android:enabled="false"/>

    <Button
        android:id="@+id/button_random_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Random test button"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>